<resources>
    <string name="app_name">e-commerce</string>
    <string name="splash_text">All you need.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="proceed_with_your">Proceed with your</string>
    <string name="register">Register</string>
    <string name="login_now">Have an account. Login now</string>
    <string name="filter">FILTER</string>
    <string name="filter_screen">Filter</string>
    <string name="price_screen">Price</string>
    <string name="view_results">VIEW RESULTS</string>
    <string name="product_details">Product Details</string>
    <string name="fake_data">s a 1993 compilation of platform games for the Super Nintendo Entertainment System. It contains remakes of Nintendo\'s four Super Mario titles released for the Nintendo Entertainment System and its Family Computer Disk</string>

    <string name="open_drawable">open</string>
    <string name="close_drawable">close</string>
    <string name="see_list">See List</string>
    <string name="add_wishlist">Added to Wishlist</string>
    <string name="removed">Item removed</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="qty">Qty</string>
    <string name="qtySemi">Qty:</string>
    <string name="your_cart">Your Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="taxes">Taxes</string>
    <string name="total">Total</string>
    <string name="continue_to_checkout">CONTINUE TO CHECKOUT</string>
    <string name="continue_to_payment">CONTINUE TO PAYMENT</string>
    <string name="continue_to_review">CONTINUE TO REVIEW</string>
    <string name="back">BACK</string>
    <string name="_1">1</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="you_may_also_like">You May also Like</string>
    <string name="dollar_sign">$</string>
    <string name="remove">REMOVE</string>
    <string name="item_added">Item already added</string>
    <string name="cart_is_empty">Your cart is empty!</string>
    <string name="add_items_shopping">Return back to add items.</string>
    <string name="whishlist">Whishlist</string>
    <string name="no_saved_items">No Saved Items.</string>
    <string name="_50_110">50–110$</string>
    <string name="_110_150">110–150$</string>
    <string name="_200">+ 200$</string>


    <string-array name="names">
        <item>SORT</item>
        <item>All</item>
        <item>Men</item>
        <item>Women</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="payment">Payment</string>
    <string name="review">Review</string>
    <string name="cart_details">Cart details</string>
    <string name="address">Address</string>
    <string name="post_code">Post code</string>
    <string name="enter_zip">Enter Zip for City and State</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="credit_card">Credit or Debit Card</string>
    <string name="caption_credit_card"><![CDATA[Enter card number, expiration date & CVV number]]></string>
    <string name="caption_cash">If you select Cash On Delivery, you can pay for your package when our Delivery Associates bring it to your door step.</string>
    <string name="cash_activated">Cash on delivery</string>
    <string name="activated">activated.</string>
    <string name="stripe">Stripe</string>
    <string name="order_confirmation">Order confirmation sent to</string>
    <string name="edit_btn">EDIT</string>
    <string name="shipping_to">Shipping to:</string>
    <string name="same_as_shipping">Same as shipping address</string>
    <string name="finish_checkout">FINISH CHECKOUT</string>
    <string name="thank_you">Thank you, your order</string>
    <string name="has_been_placed">has been placed.</string>
    <string name="continue_browsing">Continue browsing</string>
    <string name="continue_browsing_pro">Continue browsing products</string>
</resources>